# render3d

./: .gitignore  README.md  analyze_obj.py  animate_sphere.py  bvh.h  convert_to_png.py  generate_beaker_obj.py  generate_klein_obj.py  generate_mobius_obj.py  generate_new_scene.py  generate_scene.py  generate_sphere_obj.py  generate_torus_scene.py  hittable.h  material.h  mesh.h  metal_rt  ppm_to_png.py  radiosity_render.py  raytracer  raytracer.cpp  raytracer_bvh.cpp  rt_utils.h  scene_balls_behind_torii_1080p.txt  scene_balls_behind_torii_corrected.txt  scene_balls_behind_torii_with_rabbit.txt  scene_beaker.txt  scene_bunny.txt  scene_green_glass_torus.txt  scene_klein.txt  scene_mesh_sphere.txt  scene_new.txt  scene_rabbit_original_bg.txt  scene_random.txt  scene_red_torus.txt  scene_two_torii_flat.txt  temp.txt
anim_frames/: scene_002.txt  scene_003.txt  scene_004.txt  scene_006.txt  scene_009.txt  scene_011.txt  scene_016.txt  scene_017.txt  scene_019.txt  scene_020.txt  scene_021.txt  scene_022.txt
examples/: run_all_examples.sh  scene.txt  scene_2tori.txt  scene_balls_behind_torus.txt  scene_big_torus.txt  scene_lambertian_torus.txt  scene_mobius.txt  scene_rabbit_checkered.txt  scene_red_torus_tilted.txt  scene_simple.txt  scene_test_view.txt  scene_tori.txt
examples/anim_frames/: scene_000.txt  scene_001.txt  scene_005.txt  scene_007.txt  scene_008.txt  scene_010.txt  scene_012.txt  scene_013.txt  scene_014.txt  (+3 more)
metal_raytracer/: main.swift  raytracer.metal
opengl_scene/: CMakeLists.txt  main.cpp
opengl_scene/shaders/: fragment.glsl  vertex.glsl
